--- a/Feature Localization.ipynb
+++ b/Feature Localization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "eb59db76",
    "metadata": {},
    "outputs": [],
@@ -14,8 +14,86 @@
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "from tensorflow.python.keras.utils.data_utils import Sequence"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9c6f3b95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\User\\anaconda3\\lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:101: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "import io\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import pandas as pd\n",
+    "from six.moves import urllib\n",
+    "\n",
+    "from IPython.display import clear_output, Image, display, HTML\n",
+    "\n",
+    "import tensorflow.compat.v1 as tf\n",
+    "tf.disable_v2_behavior()\n",
+    "\n",
+    "import tensorflow_hub as hub\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import sklearn.metrics as sk_metrics\n",
+    "import time\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f8fdae1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess:    \n",
+    "    saver = tf.train.import_meta_graph('model/mobilenet/mobilenet_model.meta')\n",
+    "    #saver.restore(sess, tf.train.latest_checkpoint('./'))\n",
+    "    #print(sess.run('w1:0'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74fbf00f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec2c0c94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1459dac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
