ResNet50 training completed, removed model folder

--- a/Flower Localization - InceptionV3.ipynb
+++ b/Flower Localization - InceptionV3.ipynb
@@ -216,7 +216,7 @@
     "callbacks = [\n",
     "    EarlyStopping(patience=10, verbose=1),\n",
     "    ReduceLROnPlateau(factor=0.1, patience=3, min_lr=0.00001, verbose=1),\n",
-    "    ModelCheckpoint('InceptionV3_model.h5', verbose=1, save_best_only=True, save_weights_only=True)\n",
+    "    ModelCheckpoint('InceptionV3_checkpoint.h5', verbose=1, save_best_only=True, save_weights_only=True)\n",
     "]"
    ]
   },
@@ -455,6 +455,24 @@
    ],
    "source": [
     "plot_accuracy_loss(history)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef4566f7",
+   "metadata": {},
+   "source": [
+    "## Saving the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "69bc0491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('InceptionV3.h5')"
    ]
   }
  ],
